examples/test/testpolicy7125.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7125
  namespace: namespace355
spec:
  podSelector:
    matchLabels:
      key5: value26
      key8: value39
      key26: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value10
          key28: value23
      podSelector:
        matchLabels:
          key6: value35
          key32: value36
